kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "mateusclira.tech"
    secretName: tls-secret
  rules:
  - host: "mateusclira.tech"
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: cv
            port:
              number: 80
